--- a/MetalFilterCamera/Base.lproj/Main.storyboard
+++ b/MetalFilterCamera/Base.lproj/Main.storyboard
@@ -17,9 +17,40 @@
                     <view key="view" contentMode="scaleToFill" id="3se-qz-xqx" customClass="MTKView">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ma-XG-XtK">
+                                <rect key="frame" x="192" y="812" width="30" height="30"/>
+                                <state key="normal" title="촬 영"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PEl-bj-6IR">
+                                <rect key="frame" x="342" y="812" width="56" height="30"/>
+                                <state key="normal" title="필터 선택"/>
+                                <connections>
+                                    <action selector="filterSelectionClicked:" destination="BV1-FR-VrT" eventType="touchUpInside" id="l0W-UM-mNr"/>
+                                </connections>
+                            </button>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="KSc-Iz-97E">
+                                <rect key="frame" x="30" y="738" width="354" height="31"/>
+                                <connections>
+                                    <action selector="sliderValueChanged:" destination="BV1-FR-VrT" eventType="valueChanged" id="dl1-dL-N69"/>
+                                </connections>
+                            </slider>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6ma-XG-XtK" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="5iJ-io-BH2"/>
+                            <constraint firstItem="rZh-zQ-HcR" firstAttribute="bottom" secondItem="6ma-XG-XtK" secondAttribute="bottom" constant="20" id="5w0-US-gXX"/>
+                            <constraint firstItem="6ma-XG-XtK" firstAttribute="top" secondItem="KSc-Iz-97E" secondAttribute="bottom" constant="44" id="TCr-u4-98o"/>
+                            <constraint firstItem="KSc-Iz-97E" firstAttribute="leading" secondItem="rZh-zQ-HcR" secondAttribute="leading" constant="32" id="f5f-vt-ymD"/>
+                            <constraint firstItem="rZh-zQ-HcR" firstAttribute="trailing" secondItem="KSc-Iz-97E" secondAttribute="trailing" constant="32" id="ltO-pz-x0C"/>
+                            <constraint firstItem="rZh-zQ-HcR" firstAttribute="trailing" secondItem="PEl-bj-6IR" secondAttribute="trailing" constant="16" id="mxG-Q2-Jc0"/>
+                            <constraint firstItem="PEl-bj-6IR" firstAttribute="centerY" secondItem="6ma-XG-XtK" secondAttribute="centerY" id="txV-mL-o39"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="rZh-zQ-HcR"/>
                     </view>
+                    <connections>
+                        <outlet property="slider" destination="KSc-Iz-97E" id="3Bi-mc-vNp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
