--- a/MetalFilterCamera/Base.lproj/Main.storyboard
+++ b/MetalFilterCamera/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
-    <device id="retina6_1" orientation="portrait">
+    <device id="retina6_5" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,17 +15,17 @@
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="CameraViewController" customModule="MetalFilterCamera" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3se-qz-xqx" customClass="MTKView">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZHZ-uu-hpZ">
-                                <rect key="frame" x="8" y="808.5" width="167.5" height="26"/>
+                                <rect key="frame" x="52" y="351.66666666666669" width="364.66666666666669" height="26"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2YM-sj-AjX">
-                                        <rect key="frame" x="61" y="0.0" width="45.5" height="26"/>
+                                        <rect key="frame" x="159.66666666666666" y="0.0" width="45.333333333333343" height="26"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UEM-iY-S1W">
-                                                <rect key="frame" x="4" y="4" width="37.5" height="18"/>
+                                                <rect key="frame" x="4" y="4" width="37.333333333333336" height="18"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -48,7 +48,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ma-XG-XtK">
-                                <rect key="frame" x="183.5" y="801" width="47" height="41"/>
+                                <rect key="frame" x="424.66666666666669" y="344" width="47" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <state key="normal" title="촬 영"/>
                                 <connections>
@@ -56,14 +56,14 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PEl-bj-6IR">
-                                <rect key="frame" x="342" y="806.5" width="56" height="30"/>
+                                <rect key="frame" x="780" y="349.66666666666669" width="56" height="30"/>
                                 <state key="normal" title="필터 선택"/>
                                 <connections>
                                     <action selector="filterSelectionClicked:" destination="BV1-FR-VrT" eventType="touchUpInside" id="l0W-UM-mNr"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w2n-1A-430">
-                                <rect key="frame" x="366" y="52" width="40" height="40"/>
+                                <rect key="frame" x="804" y="8" width="40" height="40"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p55-6n-UVb">
                                         <rect key="frame" x="4" y="4" width="32" height="32"/>
@@ -82,16 +82,16 @@
                                 </constraints>
                             </view>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="KSc-Iz-97E">
-                                <rect key="frame" x="30" y="727" width="354" height="31"/>
+                                <rect key="frame" x="74" y="314" width="748" height="31"/>
                                 <connections>
                                     <action selector="sliderValueChanged:" destination="BV1-FR-VrT" eventType="valueChanged" id="dl1-dL-N69"/>
                                 </connections>
                             </slider>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qv4-gB-1Eg">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="찰칵" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2s-T3-1Hn">
-                                        <rect key="frame" x="178.5" y="428.5" width="57.5" height="39.5"/>
+                                        <rect key="frame" x="419" y="187.66666666666666" width="58" height="39"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="33"/>
                                         <color key="textColor" red="0.97934550050000002" green="0.56244248631690985" blue="0.61528161680127758" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -108,13 +108,19 @@
                         <constraints>
                             <constraint firstItem="rZh-zQ-HcR" firstAttribute="trailing" secondItem="w2n-1A-430" secondAttribute="trailing" constant="8" id="0UW-OL-Efv"/>
                             <constraint firstItem="6ma-XG-XtK" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="5iJ-io-BH2"/>
-                            <constraint firstItem="rZh-zQ-HcR" firstAttribute="bottom" secondItem="6ma-XG-XtK" secondAttribute="bottom" constant="20" id="5w0-US-gXX"/>
+                            <constraint firstItem="rZh-zQ-HcR" firstAttribute="bottom" secondItem="6ma-XG-XtK" secondAttribute="bottom" constant="20" id="5w0-US-gXX">
+                                <variation key="heightClass=compact-widthClass=compact" constant="8"/>
+                                <variation key="heightClass=compact-widthClass=regular" constant="8"/>
+                            </constraint>
                             <constraint firstItem="Qv4-gB-1Eg" firstAttribute="top" secondItem="3se-qz-xqx" secondAttribute="top" id="CKj-Zq-ZEv"/>
                             <constraint firstAttribute="bottom" secondItem="Qv4-gB-1Eg" secondAttribute="bottom" id="DFs-8E-BNv"/>
                             <constraint firstAttribute="trailing" secondItem="Qv4-gB-1Eg" secondAttribute="trailing" id="IDJ-LM-0VD"/>
                             <constraint firstItem="ZHZ-uu-hpZ" firstAttribute="centerY" secondItem="6ma-XG-XtK" secondAttribute="centerY" id="LgZ-tL-4Xz"/>
                             <constraint firstItem="w2n-1A-430" firstAttribute="top" secondItem="rZh-zQ-HcR" secondAttribute="top" constant="8" id="NSL-gz-2sJ"/>
-                            <constraint firstItem="6ma-XG-XtK" firstAttribute="top" secondItem="KSc-Iz-97E" secondAttribute="bottom" constant="44" id="TCr-u4-98o"/>
+                            <constraint firstItem="6ma-XG-XtK" firstAttribute="top" secondItem="KSc-Iz-97E" secondAttribute="bottom" constant="22" id="TCr-u4-98o">
+                                <variation key="heightClass=compact-widthClass=compact" constant="0.0"/>
+                                <variation key="heightClass=compact-widthClass=regular" constant="0.0"/>
+                            </constraint>
                             <constraint firstItem="Qv4-gB-1Eg" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" id="cRr-fK-pR5"/>
                             <constraint firstItem="KSc-Iz-97E" firstAttribute="leading" secondItem="rZh-zQ-HcR" secondAttribute="leading" constant="32" id="f5f-vt-ymD"/>
                             <constraint firstItem="ZHZ-uu-hpZ" firstAttribute="leading" secondItem="rZh-zQ-HcR" secondAttribute="leading" constant="8" id="fJ2-W9-tat"/>
